--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -29,7 +29,9 @@ proxies:
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 139","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 143","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 148","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇯🇵JP | 🟢 | vless | @ConfigsHUB | 8","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇨🇦CA | 🔴 | vless | @ConfigsHUB | 1","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇨🇦CA | 🟢 | vless | @ConfigsHUB | 3","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 16","type":"vless","server":"35.87.202.209","port":4433,"udp":false,"uuid":"7fc993f5-7cd7-4485-9e6f-1f7c5160c910","tls":false,"servername":"stackoverflow.com","network":"tcp","reality-opts":{"public-key":"tZn5Tdrk045zSTbBEzGwSV_LOdCZqEwT8c85pJOK_C0","short-id":"f785b38130e64177","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 6","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0","type":"vless","server":"deepend.paneltelecode.xyz","port":443,"udp":false,"uuid":"028e0ae7-5640-492d-bdae-f3c44d47e42d","tls":false,"servername":"afternic.com","network":"grpc","grpc-opts":{"grpc-service-name":"Dev"},"reality-opts":{"public-key":"J5aaCYQft4PeaMxenmrVh5WUQYRXuKNUtblM9TRpXAk","short-id":"cc26b226","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -77,7 +79,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 8'
+      - '🇨🇦CA | 🔴 | vless | @ConfigsHUB | 1'
+      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 3'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 16'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
@@ -125,7 +129,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 8'
+      - '🇨🇦CA | 🔴 | vless | @ConfigsHUB | 1'
+      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 3'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 16'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
@@ -172,7 +178,9 @@ proxy-groups:
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 143'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 148'
-      - '🇯🇵JP | 🟢 | vless | @ConfigsHUB | 8'
+      - '🇨🇦CA | 🔴 | vless | @ConfigsHUB | 1'
+      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 3'
+      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 16'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 6'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 5'
